Trivia games initial commit