@@ -2,27 +2,28 @@ package workshop;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 
 public class TriviaGame {
-    ArrayList players = new ArrayList();
+    List<String> players = new ArrayList<>();
     int[] places = new int[6];
     int[] purses = new int[6];
     boolean[] inPenaltyBox = new boolean[6];
 
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
+    List<String> popQuestions = new LinkedList<>();
+    List<String> scienceQuestions = new LinkedList<>();
+    List<String> sportsQuestions = new LinkedList<>();
+    List<String> rockQuestions = new LinkedList<>();
 
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
 
     public TriviaGame() {
         for (int i = 0; i < 50; i++) {
-            popQuestions.addLast("Pop Question " + i);
-            scienceQuestions.addLast(("Science Question " + i));
-            sportsQuestions.addLast(("Sports Question " + i));
-            rockQuestions.addLast(createRockQuestion(i));
+            popQuestions.add("Pop Question " + i);
+            scienceQuestions.add(("Science Question " + i));
+            sportsQuestions.add(("Sports Question " + i));
+            rockQuestions.add(createRockQuestion(i));
         }
     }
 
@@ -34,17 +35,16 @@ public class TriviaGame {
         return (howManyPlayers() >= 2);
     }
 
-    public boolean add(String playerName) {
-
+    public void add(String playerName) {
+        int lastPlayerIndex = howManyPlayers();
 
         players.add(playerName);
-        places[howManyPlayers()] = 0;
-        purses[howManyPlayers()] = 0;
-        inPenaltyBox[howManyPlayers()] = false;
+        places[lastPlayerIndex] = 0;
+        purses[lastPlayerIndex] = 0;
+        inPenaltyBox[lastPlayerIndex] = false;
 
         announce(playerName + " was added");
         announce("They are player number " + players.size());
-        return true;
     }
 
     public int howManyPlayers() {
@@ -88,14 +88,14 @@ public class TriviaGame {
     }
 
     private void askQuestion() {
-        if (currentCategory() == "Pop")
-            announce(popQuestions.removeFirst());
-        if (currentCategory() == "Science")
-            announce(scienceQuestions.removeFirst());
-        if (currentCategory() == "Sports")
-            announce(sportsQuestions.removeFirst());
-        if (currentCategory() == "Rock")
-            announce(rockQuestions.removeFirst());
+        if (currentCategory().equals("Pop"))
+            announce(popQuestions.remove(0));
+        if (currentCategory().equals("Science"))
+            announce(scienceQuestions.remove(0));
+        if (currentCategory().equals("Sports"))
+            announce(sportsQuestions.remove(0));
+        if (currentCategory().equals("Rock"))
+            announce(rockQuestions.remove(0));
     }
 
 
